--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
