#7 feat: Setting React Query
-redux 세팅 pull 받아온 후 react-query 세팅 완료
-redux오류 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "incremental": true,
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    // redux setting 추가
+    // 우리가 작성한 types 폴더를 타입체크하라고 알려줍니다.
+    "typeRoots": ["./node_modules/@types", "types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
