--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.13.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.7",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "husky": "^8.0.3",
@@ -24,12 +32,15 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "styled-components": "^6.0.0-rc.1",
+    "styled-reset": "^4.4.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "babel-plugin-styled-components": "^2.1.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
