--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,13 +38,17 @@
       - props true 인 경우 ignorePropertyModificationsFor 의 배열이 있는 항목은 제외됨
       - state로 이들이 지정된 매개변수
     */
-
     "no-param-reassign": [
       "error",
       {
         "props": true,
         "ignorePropertyModificationsFor": ["state"]
       }
+    ],
+    // React 함수형 컴포넌트 정의 방식 선언
+    "react/function-component-definition": [
+      2,
+      { "namedcomponents": "arrow-function" }
     ]
   }
 }
