--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,13 @@
     "react/function-component-definition": [
       2,
       { "namedcomponents": "arrow-function" }
+    ],
+    // devDependencies를 가져올 때 오류가 발생하지 않음.
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
     ]
   }
 }
