--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
     // React 함수형 컴포넌트 정의 방식 선언
     "react/function-component-definition": [
       2,
-      { "namedcomponents": "arrow-function" }
+      { "namedComponents": "arrow-function" }
     ],
     // devDependencies를 가져올 때 오류가 발생하지 않음.
     "import/no-extraneous-dependencies": [
