--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/styles": "^5.13.1",
+    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
@@ -24,8 +25,6 @@
     "@types/react-dom": "18.2.4",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
-    "dotenv-webpack": "^8.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "husky": "^8.0.3",
@@ -35,6 +34,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.1",
