--- a/package.json
+++ b/package.json
@@ -16,27 +16,37 @@
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/styles": "^5.13.1",
-    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "18.2.4",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "googleapis": "^118.0.0",
     "husky": "^8.0.3",
+    "js-cookie": "^3.0.5",
     "next": "13.4.2",
+    "next-cookie": "^2.8.0",
+    "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^8.1.0",
     "prettier": "^2.8.8",
     "query-string": "^8.1.0",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
-    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.0-rc.1",
     "styled-reset": "^4.4.7",
     "typescript": "5.0.4"
